# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.370 2005/11/07 19:46:04 rocket Exp $

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix broken aliases code that was just proof of concept

  07 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Output mkisofs command line options to assist in debugging

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/create-iso.sh:
  Fix  to  for the correct -o option

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Add VERY basic support for aliases kernel parameter.

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Remove large section of commented code

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage1_target.py:
  Allow LDFLAGS to be specified as an ENV variable for stage1

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix rc-update to automatically run default options for livecds. Removed an
  erroneous key check.

  02 Nov 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
  modules/livecd_stage1_target.py, modules/tinderbox_target.py:
  Make use spec key optional to default to profile defaults

  02 Nov 2005; Eric Edgar <rocket@gentoo.org>
  +examples/stage4_template.spec:
  Preliminary stage4_template.spec file

  01 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0_pre20051101-slot.patch, catalyst:
  Updated version stamp and added slot patch.

  26 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/netboot_target.py:
  Fix ordering problem so self.settings is defined

  18 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Correct a rsync issue when the directory doesnt exist

  17 Oct 2005; Eric Edgar <rocket@gentoo.org>